--- a/html/MakePhoto.html
+++ b/html/MakePhoto.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<!DOCTYPE HTML>
 <html lang="en">
 <head>
 	<meta charset="UTF-8">
@@ -8,7 +8,7 @@
 	<script src="../js/canvas2image.js"></script>
 	<script src="../js/MakePhoto.js"></script>
 </head>
-<body>
+<body style="user-select:none;">
 	<div style="text-align:center;">
 		<input type="file" accept="image/*" id="uploadPhoto" name="uploadPhoto">
 		<label for="uploadPhoto" class="inputLabel">点我上传！</label>
