--- a/html/MakePhoto.html
+++ b/html/MakePhoto.html
@@ -16,5 +16,6 @@
 	<canvas id="makePhotoCanvas" class="canvas1" height="300" width="300"></canvas>
 	<canvas id="upper" class="canvas1 canvas2" height="300" width="300"></canvas>
 	<div id="downLoadImg" class="downLoadBtn">点我下载！</div>
+	<button type="button" id="saveButton">IE下载！</button>
 </body>
 </html>
