--- a/html/MakePhoto.html
+++ b/html/MakePhoto.html
@@ -11,11 +11,11 @@
 <body style="user-select:none;">
 	<div style="text-align:center;">
 		<input type="file" accept="image/*" id="uploadPhoto" name="uploadPhoto">
-		<label for="uploadPhoto" class="inputLabel">点我上传！</label>
+		<label for="uploadPhoto" class="inputLabel">点我上传！ 2017.4.30 13.38</label>
 	</div>
 	<canvas id="makePhotoCanvas" class="canvas1" height="300" width="300"></canvas>
 	<canvas id="upper" class="canvas1 canvas2" height="300" width="300"></canvas>
 	<div id="downLoadImg" class="downLoadBtn">点我下载！</div>
-	<button type="button" id="saveButton">IE下载！</button>
+	<!-- <button type="button" id="saveButton">IE下载！</button> -->
 </body>
 </html>
