兼容移动端

--- a/html/MakePhoto.html
+++ b/html/MakePhoto.html
@@ -2,6 +2,7 @@
 <html lang="en">
 <head>
 	<meta charset="UTF-8">
+	<meta name="viewport" content="width=device-width,initial-scale=1.0,minimum-scale=1.0,maximum-scale=1.0,user-scalable=no" />
 	<title>制图器</title>
 	<link type="text/css" rel="stylesheet" href="../style/MakePhoto.css">
 	<script src="../js/jquery-3.2.1.min.js"></script>
